# vox

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
docs/adr/: 001-batch-channel-transcription.md  002-openai-cloud-backend.md
skills/vox/: SKILL.md
src/vox/: __main__.py
src/vox/adapters/: anthropic_summarizer.py  claude_summarizer.py  click_progress.py  disk_file_cleaner.py  disk_file_writer.py  disk_metadata_writer.py  ffmpeg_audio_cleaner.py  hf_model_manager.py  json_config_store.py  mlx_transcriber.py  noop_summarizer.py  openai_transcriber.py  rclone_uploader.py  system_dep_checker.py  ytdlp_channel_lister.py  ytdlp_downloader.py
src/vox/models/: audio_config.py  batch_result.py  channel_video.py  date_range.py  exceptions.py  language.py  openai_model.py  segment.py  summary_result.py  transcription_backend.py  transcription_input.py  transcription_result.py  video_metadata.py  whisper_model.py  word.py
src/vox/ports/: audio_cleaner.py  channel_lister.py  config_store.py  dependency_checker.py  downloader.py  file_cleaner.py  file_uploader.py  file_writer.py  metadata_writer.py  model_manager.py  progress_reporter.py  transcriber.py  transcript_summarizer.py
src/vox/schemas/: init.json  transcribe.json
src/vox/use_cases/: batch_transcribe.py  check_health.py  get_schema.py  init_deps.py  transcribe.py
tests/fakes/: fake_audio_cleaner.py  fake_channel_lister.py  fake_config_store.py  fake_dependency_checker.py  fake_downloader.py  fake_file_cleaner.py  fake_file_uploader.py  fake_file_writer.py  fake_metadata_writer.py  fake_model_manager.py  fake_progress.py  fake_summarizer.py  fake_transcriber.py
tests/unit/adapters/: test_install_hints.py  (+3 more)
(+26 files in other folders)
