[project]
name = "vox-transcribe"
version = "0.1.0"
description = "Agent-first CLI for audio/video transcription via MLX Whisper"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
keywords = [
    "transcription",
    "whisper",
    "mlx",
    "stt",
    "speech-to-text",
    "cli",
    "agent",
    "subtitles",
    "srt",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "click>=8.1",
    "mlx-whisper>=0.4",
    "yt-dlp>=2024.0.0",
]

[project.urls]
Homepage = "https://github.com/Pinous/vox"
Repository = "https://github.com/Pinous/vox"
Issues = "https://github.com/Pinous/vox/issues"

[project.scripts]
vox = "vox.adapters.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vox"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "vox/skills"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.8",
    "ty>=0.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: requires external tools (ffmpeg, mlx-whisper)",
    "e2e: end-to-end CLI tests",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["vox"]
